--- a/dada/extras/documentation/pod_source/changes_9_x.pod
+++ b/dada/extras/documentation/pod_source/changes_9_x.pod
@@ -4,6 +4,32 @@
 
 =head1 Dada Mail Changelog for v9.x
 
+=head1 9.0.3
+
+This is mostly a bug-fix release, fixing bugs found in the v9.0.2 release 
+
+=head2 Changes
+
+We've made some changes in the B<Membership - View> screen to make loading a bit more apparrent, stopping the user from guessing if things are working correctly. We're utilizing a JavaScript library called, spin.js (L<http://spin.js.org/>) to help out on making the loading screen. Thanks, min.js! 
+
+We've also made similar changes to the Tracker plugin's default screen, as well as preloading some of the easier-to-create data before the rest of the data is availabl. 
+
+Crunching the numbers to show the table of analytics may take a while, if you have busy lists! Now, you'll have access to the individual message reports before the index report is ready. 
+
+=head2 Bugfixes
+
+=head3  Filter Subscribers Through the Black List Broken 
+
+L<https://github.com/justingit/dada-mail/issues/536>
+
+=head3 Core5 Filemanager returns URL, relative to site root, which is broken when email w/image is sent 
+
+L<https://github.com/justingit/dada-mail/issues/533>
+
+=head3 Alert boxes showing errors hard to distinguish 
+
+L<https://github.com/justingit/dada-mail/issues/532>
+
 =head1 9.0.2
 
 =head2 Summary 
